Fix `<selects>` with invisible content

--- a/resources/stylesheets/components/_text-field.scss
+++ b/resources/stylesheets/components/_text-field.scss
@@ -20,7 +20,7 @@
 
   width: 100%;
   height: my.$gutter * 2;
-  padding: my.$gutter * 0.5 0;
+  padding: 0;
   margin: 0; // vertical margins break floating labels
 
   color: my.palette('text', 'dark');
